# check-misspellings

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  check_misspellings.py  setup.cfg
check_misspellings/: __init__.py
check_misspellings/builtin_corpus/: __init__.py  html_terms.py  http_terms.py  known_env_vars.py  language_terms.py  os_terms.py  proper_nouns.py  python_terms.py  scowl_wordlist.py  software_terms.py  unix_terms.py  web_terms.py
check_misspellings/tokenizers/: __init__.py  common.py  py_tok.py  text_tok.py
