[metadata]
name = check-misspellings
version = 0.0.1
description = A pre-commit hook for checking for known misspellings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sirosen/check-jsonschema
author = Stephen Rosen
author_email = sirosen@uchicago.edu

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6.2
install_requires = identify<2.0
packages = find:

[options.entry_points]
console_scripts =
    check-misspellings = check_misspellings:main


[isort]
profile = black


[flake8]
exclude = .git,.tox,__pycache__,.eggs,dist,.venv*,build
# we enforce 80 char width with `black` "loosely", so flake8 should be set to
# not fail on up to 90 chars of width
max-line-length = 90

# based on the flake8 conf for `black` itself:
#   https://github.com/ambv/black/blob/master/.flake8
#
# W503/W504 conflict, black causes E203
ignore = W503,W504,E203,
